# RegisterVisualizer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
scripts/: build.bat  build.sh  clean.bat  clean.sh
source/: backend.cpp  backend.h  constants.h  main.cpp  path.h  qml.qrc  treeNode.h  yaml.cpp  yaml.h
source/qml/: DraggablePanel.qml  confR.qml  confRWCombo.qml  confRWText.qml  confWCombo.qml  confWText.qml  field.qml  main.qml  module.qml  pinButton.qml  register.qml  registerTab.qml
